<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newsCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:padding="8dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/myImageViewText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/txtPubDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainText"
            android:textColor="#000000"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

</android.support.v7.widget.CardView>